# beyond-chatgpt-labs

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: hello_world.ipynb
