[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "openai",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
]
